Golfing... and enabling remote (~aliased) actions
* `createRemoteAction` helper for creating actions that can be invoked
  from the renderer thread and instantiated on the main thread. This
  enables use of thunks in scenarios where you want the main thread to
  do the work, e.g. fetching data from APIs.
* Swap enhancers for middleware and a reducer.
* Remove Map/Set serialization. (It's supported natively in Electron 9.)
* Type safety tweaks here and there to satisfy tsc.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@mckayla/electron-redux",
-  "version": "2.0.1",
+  "name": "@paulrosania/electron-redux",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Keep your store in sync across processes",
-  "author": "McKayla Washburn",
-  "repository": "https://github.com/partheseas/electron-redux",
-  "bugs": "https://github.com/partheseas/electron-redux/issues",
+  "author": "Paul Rosania",
+  "repository": "https://github.com/paulrosania/electron-redux",
+  "bugs": "https://github.com/paulrosania/electron-redux/issues",
   "files": [
     "dist/**"
   ],
